test/errors/arrays/new_bounds_rank_mismatch_error.hy
// Rectangular arrays require one bound per dimension.
int main()
{
    int[,] grid = new[3]
    return 0
}
